# QualityControl

Modules/: CMakeLists.txt
Modules/TRD/: CMakeLists.txt  SimpleTrd.json  TRDQCConf.json
Modules/TRD/include/TRD/: LinkDef.h  RawDataQcCheck.h  RawDataQcPostProccessing.h  RawDataQcTask.h  SimpleTrdCheck.h  SimpleTrdPostProcessing.h  SimpleTrdTask.h
Modules/TRD/run/: runTRDRawReader.cxx
Modules/TRD/src/: RawDataQcCheck.cxx  RawDataQcPostProccessing.cxx  RawDataQcTask.cxx  SimpleTrdCheck.cxx  SimpleTrdPostProcessing.cxx  SimpleTrdTask.cxx  runTRD.cxx  runTRDRawReader.cxx
